--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,37 @@
-aiodns==3.2.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.10.11
-aiohttp-retry==2.9.1
-aiosignal==1.3.2
-attrs==25.3.0
-beautifulsoup4==4.13.4
-ccxt==4.4.75
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-cryptography==44.0.2
-frozenlist==1.5.0
-greenlet==3.2.1
-h11==0.14.0
+aiofiles==24.1.0
+anyio==4.9.0
+asyncio==3.4.3
+blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
+dotenv==0.9.9
+Flask==3.1.1
+greenlet==3.2.2
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+Hypercorn==0.17.3
+hyperframe==6.1.0
 idna==3.10
-multidict==6.4.2
-numpy==2.2.4
-outcome==1.3.0.post0
-pandas==2.2.3
-playwright==1.51.0
-propcache==0.3.1
-pycares==4.6.0
-pycparser==2.22
-pyee==12.1.1
-PyJWT==2.10.1
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+playwright==1.52.0
+priority==2.0.0
+pyee==13.0.0
 python-dotenv==1.1.0
-pytz==2025.2
+python-telegram-bot==22.1
+Quart==0.20.0
+quart-wtf==0.0.1
 requests==2.32.3
-scipy==1.15.2
-selenium==4.31.0
-setuptools==78.1.0
-six==1.17.0
+selectolax==0.3.29
 sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-ta==0.11.0
-trio==0.29.0
-trio-websocket==0.12.2
-twilio==9.5.2
+telegram_text==0.2.0
 typing_extensions==4.13.2
-tzdata==2025.2
-undetected-chromedriver==3.5.5
 urllib3==2.4.0
-websocket-client==1.8.0
-websockets==15.0.1
+Werkzeug==3.1.3
 wsproto==1.2.0
-yarl==1.19.0
+WTForms==3.2.1
