--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
 anyio==4.9.0
 asyncio==3.4.3
+attrs==25.3.0
 blinker==1.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.0
 dotenv==0.9.9
 Flask==3.1.1
+frozenlist==1.6.0
 greenlet==3.2.2
 h11==0.16.0
 h2==4.2.0
@@ -19,8 +24,10 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+multidict==6.4.4
 playwright==1.52.0
 priority==2.0.0
+propcache==0.3.1
 pyee==13.0.0
 python-dotenv==1.1.0
 python-telegram-bot==22.1
@@ -35,3 +42,4 @@ urllib3==2.4.0
 Werkzeug==3.1.3
 wsproto==1.2.0
 WTForms==3.2.1
+yarl==1.20.0
